--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,9 +34,8 @@
 					{% include navigation.html %}
 				</section>
 				<section class="hero_search">
-					<h1>CMPNY IT Knowledge Base</h1>
-					<p>Everything you need to know about accessing IT resources at CMPNY.</p>
-					<p></p>Powered by Tech Futures</p>
+					<h1>{{ site.title }}</h1>
+					<p>Мы делимся опытом и знаниями друг с другом, чтобы вместе эффективнее решать сложные задачи</p>
 					{% include search.html %}
 				</section>
 			</div>
