--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,6 @@
 					{{ link.name }}</a></li>
 			{% endfor %}
 		</ul>
-		<p class="copyright">&copy; {{ site.title }} {{ site.time | date: "%Y" }}. All rights reserved. <a href="https://www.techfutures.xyz">Powered by Tech Futures</a></p>
+		<p class="copyright">&copy; {{ site.title }} {{ site.time | date: "%Y" }}.</p>
 	</div>
 </footer>
